--- a/letChat/chatService/pom.xml
+++ b/letChat/chatService/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>javase</artifactId>
             <version>3.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>generstorUtils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
