--- a/letChat/chatService/pom.xml
+++ b/letChat/chatService/pom.xml
@@ -108,12 +108,22 @@
             <artifactId>javase</artifactId>
             <version>3.4.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>generstorUtils</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
