完成简单的登录注册
完成简单的登录注册

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>chatService</module>
         <module>generstorUtils</module>
+        <module>codeGenerator</module>
     </modules>
 
     <name>letchat</name>
