--- a/chatService/src/main/resources/application.properties
+++ b/chatService/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 ############################################################
 #
-# \u5206\u5e03\u5f0f\u6587\u4ef6\u7cfb\u7edf fastdfs \u914d\u7f6e
+# FASTDFS Í¼Æ¬·þÎñÆ÷
 #
 ############################################################
-#fdfs.soTimeout=1501
-#fdfs.connectTimeout=601
-#fdfs.thumbImage.width=80
-#fdfs.thumbImage.height=80
-#fdfs.trackerList[0]=192.168.1.70:22122
+fdfs.soTimeout=1501
+fdfs.connectTimeout=601
+fdfs.thumbImage.width=80
+fdfs.thumbImage.height=80
+fdfs.trackerList[0]=47.110.151.78:22122
 
 ############################################################
 #
